fix dates, citation keys in second pass

--- a/studies/metaMER_library_second_pass.bib
+++ b/studies/metaMER_library_second_pass.bib
@@ -6390,7 +6390,7 @@ EXPORT DATE: 13 May 2024
   url           = {https://doi.org/10.1109/taffc.2018.2884461},
 }
 
-@Article{marin‐morales2018af,
+@Article{marinmorales2018af,
   author           = {Mar{\'\i}n‐Morales, Javier and Higuera-Trujillo, Juan and Greco, Alberto and Guixeres, Jaime and Llinares, Carmen and Scilingo, Enzo and Alca{\~n}{\'\i}z, Mariano and Valenza, Gaetano},
   journal          = {Scientific reports},
   title            = {Affective computing in virtual reality: emotion recognition from brain and heartbeat dynamics using wearable sensors},
@@ -6408,7 +6408,7 @@ EXPORT DATE: 13 May 2024
   isbn             = {2045-2322},
   keywords         = {Affective Computing; Emotion Recognition; Emotion Regulation; Human-Computer Interaction; Speech Emotion},
   la               = {en},
-  modificationdate = {2024-05-16T06:35:35},
+  modificationdate = {2024-05-17T04:30:12},
   priority         = {prio3},
   publisher        = {Nature Portfolio},
   url              = {https://doi.org/10.1038/s41598-018-32063-4},
@@ -6804,7 +6804,7 @@ EXPORT DATE: 13 May 2024
   url              = {https://doi.org/10.1007/s40708-016-0051-5},
 }
 
-@Article{marin‐morales2020em,
+@Article{marinmorales2020em,
   author           = {Mar{\'\i}n‐Morales, Javier and Llinares, Carmen and Guixeres, Jaime and Alca{\~n}{\'\i}z, Mariano},
   journal          = {Sensors},
   title            = {Emotion Recognition in Immersive Virtual Reality: From Statistics to Affective Computing},
@@ -6823,7 +6823,7 @@ EXPORT DATE: 13 May 2024
   isbn             = {1424-8220},
   keywords         = {Affective Computing; Emotion Recognition; Human-Computer Interaction},
   la               = {en},
-  modificationdate = {2024-05-16T06:35:35},
+  modificationdate = {2024-05-17T04:30:16},
   priority         = {prio3},
   publisher        = {Multidisciplinary Digital Publishing Institute},
   url              = {https://doi.org/10.3390/s20185163},
@@ -8348,7 +8348,7 @@ EXPORT DATE: 13 May 2024
   url              = {https://doi.org/10.5565/rev/elcvia.1045},
 }
 
-@Article{arevalillo‐herraez2019co,
+@Article{arevalilloherraez2019co,
   author           = {Arevalillo‐Herr{\'a}ez, Miguel and Cobos, M{\'a}ximo and Roger, Sandra and Garc{\'\i}a-Pineda, Miguel},
   journal          = {Sensors},
   title            = {Combining Inter-Subject Modeling with a Subject-Based Data Transformation to Improve Affect Recognition from EEG Signals},
@@ -8367,7 +8367,7 @@ EXPORT DATE: 13 May 2024
   isbn             = {1424-8220},
   keywords         = {Emotion Recognition; EEG Analysis; Deep Learning for EEG; Emotion Regulation; Affective Computing},
   la               = {en},
-  modificationdate = {2024-05-16T06:35:35},
+  modificationdate = {2024-05-17T04:30:20},
   priority         = {prio3},
   publisher        = {Multidisciplinary Digital Publishing Institute},
   url              = {https://doi.org/10.3390/s19132999},
@@ -9282,7 +9282,7 @@ EXPORT DATE: 13 May 2024
   url           = {https://doi.org/10.3390/electronics9121988},
 }
 
-@Article{marin‐morales2021he,
+@Article{marinmorales2021he,
   author           = {Mar{\'\i}n‐Morales, Javier and Higuera-Trujillo, Juan and Guixeres, Jaime and Llinares, Carmen and Alca{\~n}{\'\i}z, Mariano and Valenza, Gaetano},
   journal          = {PloS one},
   title            = {Heart rate variability analysis for the assessment of immersive emotional arousal using virtual reality: Comparing real and virtual scenarios},
@@ -9301,7 +9301,7 @@ EXPORT DATE: 13 May 2024
   isbn             = {1932-6203},
   keywords         = {Heart Rate Variability; Affective Computing; Emotion Recognition; Emotion Regulation},
   la               = {en},
-  modificationdate = {2024-05-16T06:35:35},
+  modificationdate = {2024-05-17T04:30:23},
   priority         = {prio3},
   publisher        = {Public Library of Science},
   url              = {https://doi.org/10.1371/journal.pone.0254098},
@@ -11443,7 +11443,7 @@ EXPORT DATE: 13 May 2024
   url              = {https://doi.org/10.3390/app13031954},
 }
 
-@Article{dacosta‐abreu2017fa,
+@Article{dacostaabreu2017fa,
   author           = {Da Costa‐Abreu, M{\'a}rjory and Bezerra, Giuliana},
   journal          = {Pattern analysis and applications/Pattern analysis \& applications},
   title            = {FAMOS: a framework for investigating the use of face features to identify spontaneous emotions},
@@ -11462,7 +11462,7 @@ EXPORT DATE: 13 May 2024
   isbn             = {1433-7541},
   keywords         = {Emotion Recognition; Affective Computing; Face Perception; Facial Expression; Emotional Expressions},
   la               = {en},
-  modificationdate = {2024-05-16T06:35:35},
+  modificationdate = {2024-05-17T04:30:27},
   priority         = {prio3},
   publisher        = {Springer Science+Business Media},
   url              = {https://doi.org/10.1007/s10044-017-0675-y},
